--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -50,7 +50,9 @@
       "medium": "Середній",
       "high": "Високий"
     },
-    "beforeStart": "Перш ніж почати ваш проект, важливо створити дошку для візуалізації та відстеження всіх необхідних завдань та важливих подій. Ця дошка служить потужним інструментом для організації робочого процесу та забезпечення ефективної співпраці між членами команди.",
+    "beforeStart1": "Перш ніж почати ваш проект, важливо ",
+    "beforeStartColor": "створити дошку",
+    "beforeStart2": " для візуалізації та відстеження всіх необхідних завдань та важливих подій. Ця дошка служить потужним інструментом для організації робочого процесу та забезпечення ефективної співпраці між членами команди.",
     "modals": {
       "newTitle": "Нова дошка",
       "editTitle": "Редагувати дошку",
