--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -30,7 +30,8 @@
   "sidebar": {
     "boards": "Мої дошки",
     "create": "Створити нову дошку",
-    "helpText": "Якщо вам потрібна допомога з TaskPro, перегляньте наші ресурси підтримки або зверніться до нашої служби підтримки.",
+    "helpText1": "Якщо вам потрібна допомога з",
+    "helpText2": ", перегляньте наші ресурси підтримки або зверніться до нашої служби підтримки.",
     "helpButton": "Потрібна допомога?",
     "logoutButton": "Вийти ",
     "helpModal": {
