--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -102,5 +102,9 @@
     "stillTrouble": "Якщо у вас ще є проблеми, не соромтеся звертатися. Ми тут, щоб допомогти!",
     "homeLink": "Головна",
     "helpButton": "Зв'язатись з нами"
+  },
+  "deleteModal": {
+    "title": "Ви впевнені, що хочете видалити це?",
+    "confirm": "Підтвердити"
   }
 }
