--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -35,8 +35,8 @@
     "helpButton": "Потрібна допомога?",
     "logoutButton": "Вийти ",
     "helpModal": {
-      "toast.error": "Введіть будь ласка дані для відправки форми",
-      "toast.success": "Форма відправлена успішно!",
+      "toast.error": "Введіть, будь ласка, дані для відправки форми ❗️",
+      "toast.success": "Форма відправлена успішно! ✅",
       "title": "Потрібна допомога",
       "email": "Адреса електронної пошти ",
       "comment": "Коментар",
@@ -87,7 +87,8 @@
       "deadline": "Крайній термін",
       "today": "Сьогодні,",
       "addButton": "Додати",
-      "editButton": "Редагувати"
+      "editButton": "Редагувати",
+      "toast.success": "Картка додана успішно ✅"
     },
     "popup": {
       "progress": "В роботі",
@@ -95,14 +96,15 @@
     }
   },
   "404": {
-    "title": "Ой! Сторінку не знайдено",
+    "ops": "Уууупс...",
+    "title": "Сторінку не знайдено",
     "text": "Здається, ви потрапили на сторінку, якої не існує. Не хвилюйтеся, це трапляється з нами всіма. Можливо, ви перейшли за застарілим посиланням, або сторінка була переміщена.",
     "stepsTitle": "Ось кілька рекомендацій, які ви можете спробувати:",
     "step1": "1. Перевірте URL на наявність помилок і спробуйте ще раз.",
     "step2": "2. Поверніться на головну сторінку і перейдіть звідти.",
     "step3": "3. Зверніться до адміністратора веб-сайту за допомогою.",
     "stillTrouble": "Якщо у вас ще є проблеми, не соромтеся звертатися. Ми тут, щоб допомогти!",
-    "homeLink": "Головна",
+    "homeLink": "Назад на головну",
     "helpButton": "Зв'язатись з нами"
   },
   "deleteModal": {
