--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -35,8 +35,8 @@
     "helpButton": "Need help?",
     "logoutButton": "Log out ",
     "helpModal": {
-      "toast.error": "Please enter data to submit",
-      "toast.success": "Form submit is successfully!",
+      "toast.error": "Please enter data to submit ❗️",
+      "toast.success": "Form submit is successfully! ✅",
       "title": "Need help",
       "email": "Email address ",
       "comment": "Comment",
@@ -87,7 +87,8 @@
       "deadline": "Deadline",
       "today": "Today,",
       "addButton": "Add",
-      "editButton": "Edit"
+      "editButton": "Edit",
+      "toast.success": "Card is added successfully ✅"
     },
     "popup": {
       "progress": "In progress",
@@ -95,14 +96,15 @@
     }
   },
   "404": {
-    "title": "Oops! Page Not Found",
+    "ops": "Oooops...",
+    "title": "Page is not found",
     "text": "It seems like you've stumbled upon a page that doesn't exist. Don't worry, it happens to the best of us. Maybe you followed an outdated link, or the page has been moved.",
     "stepsTitle": "Here are a few things you can try:",
     "step1": "1. Check the URL for typos and try again.",
     "step2": "2. Return to the homepage and navigate from there.",
     "step3": "3. Contact the website administrator for assistance.",
     "stillTrouble": "If you're still having trouble, feel free to reach out. We're here to help!",
-    "homeLink": "Home",
+    "homeLink": "Back to home",
     "helpButton": "Contact Us"
   },
   "deleteModal": {
