--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -88,7 +88,8 @@
       "today": "Сьогодні,",
       "addButton": "Додати",
       "editButton": "Редагувати",
-      "toast.success": "Картка додана успішно ✅"
+      "toast.success": "Картка додана успішно ✅",
+      "toast.error": "Введіть, будь ласка, дані для створення завдання ❗️"
     },
     "popup": {
       "progress": "В роботі",
