--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -111,5 +111,8 @@
   "deleteModal": {
     "title": "Ви впевнені, що хочете видалити це?",
     "confirm": "Підтвердити"
+  },
+  "developersModal": {
+    "text": "Розроблено DreamTeam"
   }
 }
