--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -111,5 +111,8 @@
   "deleteModal": {
     "title": "Are you sure you want to delete this?",
     "confirm": "Confirm"
+  },
+  "developersModal": {
+    "text": "Developed by DreamTeam"
   }
 }
