--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -35,8 +35,8 @@
     "helpButton": "Потрібна допомога?",
     "logoutButton": "Вийти ",
     "helpModal": {
-      "toast.error": "Введіть, будь ласка, дані для відправки форми ❗️",
-      "toast.success": "Форма відправлена успішно! ✅",
+      "toast.error": "Введіть дані для відправки форми ❗️",
+      "toast.success": "Ваше повідомлення відправлено успішно! ✅",
       "title": "Потрібна допомога",
       "email": "Адреса електронної пошти ",
       "comment": "Коментар",
