added columns actions
moved columns redux logic to board slice and operations

--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -73,7 +73,8 @@
       "editTitle": "Edit column",
       "input": "Title",
       "addButton": "Add",
-      "editButton": "Edit"
+      "editButton": "Edit",
+      "toast.error": "Column can't exist without a title 😕"
     }
   },
   "cards": {
