--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -73,7 +73,8 @@
       "editTitle": "Редагувати колонку",
       "input": "Назва",
       "addButton": "Додати",
-      "editButton": "Редагувати"
+      "editButton": "Редагувати",
+      "toast.error": "Колонка не може існувати без назви 😕"
     }
   },
   "cards": {
