finished card operations

--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -82,6 +82,9 @@
   },
   "cards": {
     "addButton": "Додати ще одну картку",
+    "priority": "Пріоритет",
+    "deadline": "Термін",
+    "deadlineToday": "Дедлайн сьогодні",
     "modals": {
       "addTitle": "Додати картку",
       "editTitle": "Редагувати картку",
@@ -92,8 +95,9 @@
       "today": "Сьогодні,",
       "addButton": "Додати",
       "editButton": "Редагувати",
-      "toast.success": "Картка додана успішно ✅",
-      "toast.error": "Введіть, будь ласка, дані для створення завдання ❗️"
+      "toast.error": "Введіть, будь ласка, дані для створення завдання ❗️",
+      "toast.add.success": "Картка додана успішно ✅",
+      "toast.edit.success": "Картка відредагована успішно ✅"
     },
     "popup": {
       "progress": "В роботі",
