--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -82,6 +82,9 @@
   },
   "cards": {
     "addButton": "Add another card",
+    "priority": "Priority",
+    "deadline": "Deadline",
+    "deadlineToday": "Today is a deadline",
     "modals": {
       "addTitle": "Add card",
       "editTitle": "Edit card",
@@ -93,7 +96,8 @@
       "addButton": "Add",
       "editButton": "Edit",
       "toast.error": "Please enter all fields to create a task ❗️",
-      "toast.success": "Card is added successfully ✅"
+      "toast.add.success": "Card is added successfully ✅",
+      "toast.edit.success": "Card is edited successfully ✅"
     },
     "popup": {
       "progress": "In progress",
