--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -63,6 +63,9 @@
       "icons": "Icons",
       "background": "Background",
       "input": "Title",
+      "searchBoard": "Search Board",
+      "search": "Search",
+      "searchInput": "Enter board name",
       "newButton": "Create",
       "editButton": "Edit",
       "toast.error": "Enter title to create a board ❗️",
