--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -63,6 +63,9 @@
       "icons": "Іконки",
       "background": "Фон",
       "input": "Назва",
+      "searchBoard": "Пошук дошки",
+      "search": "Пошук",
+      "searchInput": "Введіть назву дошки",
       "newButton": "Створити",
       "editButton": "Редагувати",
       "toast.error": "Введіть назву дошки ❗️",
