--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -29,6 +29,8 @@
   },
   "sidebar": {
     "boards": "Мої дошки",
+    "search": "Знайдено",
+    "showAll": "Показати всі",
     "create": "Створити нову дошку",
     "helpText1": "Якщо вам потрібна допомога з",
     "helpText2": ", перегляньте наші ресурси підтримки або зверніться до нашої служби підтримки.",
