--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -29,6 +29,8 @@
   },
   "sidebar": {
     "boards": "My boards",
+    "search": "Found",
+    "showAll": "Show all",
     "create": "Create a new board",
     "helpText1": "If you need help with",
     "helpText2": ", check out our support resources or reach out to our customer support team.",
