calendar edit and bugfixes

--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -91,6 +91,7 @@
     "priority": "Priority",
     "deadline": "Deadline",
     "deadlineToday": "Today is a deadline",
+    "empty": "No cards",
     "modals": {
       "addTitle": "Add card",
       "editTitle": "Edit card",
