--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -91,6 +91,7 @@
     "priority": "Пріоритет",
     "deadline": "Термін",
     "deadlineToday": "Дедлайн сьогодні",
+    "empty": "Карток немає",
     "modals": {
       "addTitle": "Додати картку",
       "editTitle": "Редагувати картку",
