--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -129,5 +129,11 @@
   },
   "developersModal": {
     "text": "Розроблено DreamTeam"
+  },
+  "stats": {
+    "header": "Статистика моїх завдань"
+  },
+  "schedule": {
+    "header": "Мій розклад"
   }
 }
