--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -129,5 +129,11 @@
   },
   "developersModal": {
     "text": "Developed by DreamTeam"
+  },
+  "stats": {
+    "header": "My Tasks Statistics"
+  },
+  "schedule": {
+    "header": "My Schedule"
   }
 }
