--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -25,7 +25,11 @@
   },
   "editUser": {
     "title": "Edit  profile",
-    "button": "Send"
+    "button": "Send",
+    "toast":{
+      "editUserSuccess": "Сhanges saved",
+      "editUserError":"Filling error"
+    }
   },
   "sidebar": {
     "boards": "My boards",
