--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -131,7 +131,23 @@
     "text": "Розроблено DreamTeam"
   },
   "stats": {
-    "header": "Статистика моїх завдань"
+    "header": "Статистика моїх завдань",
+    "headerPriority": "Статистика за пріоритетністю задач",
+    "headerTiming": "Статистика за дедлайнами задач",
+    "selectHeader": "Статистика для дошки:",
+    "priority": {
+      "without": "Відсутній",
+      "low": "Низький",
+      "medium": "Середній",
+      "high": "Високий"
+    },
+    "timing": {
+      "outdated": "Протерміновані",
+      "today": "Сьогодні",
+      "week": "Цього тижня",
+      "month": "Цього місяця",
+      "further": "Далі"
+    }
   },
   "schedule": {
     "header": "Мій розклад"
