--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -56,7 +56,7 @@
     "filter": {
       "label": "Label color",
       "all": "Show all",
-      "without": "Without priority",
+      "without priority": "Without priority",
       "low": "Low",
       "medium": "Medium",
       "high": "High"
