--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -56,7 +56,7 @@
     "filter": {
       "label": "Колір мітки",
       "all": "Показати все",
-      "without": "Без пріоритету",
+      "without priority": "Без пріоритету",
       "low": "Низький",
       "medium": "Середній",
       "high": "Високий"
