--- a/src/assets/i18/locales/en/translation.json
+++ b/src/assets/i18/locales/en/translation.json
@@ -77,6 +77,7 @@
       "editButton": "Edit",
       "customBackground": "Choose your custom background",
       "chooseFile": "Choose File",
+      "fileChosen": "File was uploaded",
       "toast.error": "Enter title to create a board ❗️",
       "toast.add.success": "Board was created successfully ✅",
       "toast.edit.success": "Board was edited successfully ✅"
