--- a/src/assets/i18/locales/uk/translation.json
+++ b/src/assets/i18/locales/uk/translation.json
@@ -148,6 +148,8 @@
     "boards": "дошок",
     "tasks": "завдань",
     "has": "має",
+    "all": "всі",
+    "noTasks": "У вас ще немає завдань, щоб відобразити статистику...",
     "priority": {
       "without": "Відсутній",
       "low": "Низький",
